--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta tags for search engines-->
+    <meta name="description" content="Yoga Wellness. Transformative journey of wellness, yoga and healing in Portlaoise, Ireland">
+    <meta name="keywords" content="yoga wellness, yoga, meditation, wellness, Portlaoise, Ireland">
     <!--Title-->
     <title>Yoga Wellness</title>
     <!--Favicon-->
