--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 </head>
 <body>
     <!--Header-->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1 id="title-logo">Yoga Wellness</h1>
+        </a>
+    </header>
 
     <!--Main content-->
     <main>Main content</main>
