--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <a href="index.html">
             <h1 id="title-logo">Yoga Wellness</h1>
         </a>
+        <nav>
+            <ul id="menu-list">
+                <li><a href="">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!--Main content-->
