--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </a>
         <nav>
             <ul id="menu-list">
-                <li><a href="">Home</a></li>
+                <li><a href="" class="active">Home</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Contact Us</a></li>
             </ul>
