--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <a href="index.html">
             <h1 id="title-logo">Yoga Wellness</h1>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
             <ul id="menu-list">
                 <li><a href="" class="active">Home</a></li>
