--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Header-->
     <header>
         <a href="index.html">
-            <h1 id="title-logo">Yoga Wellness</h1>
+            <h1 id="logo">Yoga Wellness</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">X</label>
