--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 id="logo">Yoga Wellness</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu-list">
                 <li><a href="" class="active">Home</a></li>
@@ -36,6 +36,22 @@
     <main>Main content</main>
 
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" 
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/"  target="_blank" rel="noopener" 
+                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.twitter.com/"  target="_blank" rel="noopener" 
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://www.tiktok.com/"  target="_blank" rel="noopener" 
+                aria-label="Visit our Tiktok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a></li>
+            <li><a href="https://www.youtube.com/"  target="_blank" rel="noopener" 
+                aria-label="Visit our youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+        </ul>
+    </footer>
+
+    <!--Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/b8c065ada2.js" crossorigin="anonymous"></script>
 </body>
 </html>
