--- a/gallery.html
+++ b/gallery.html
@@ -25,17 +25,15 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu-list">
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="">Gallery</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="" class="active">Gallery</a></li>
                 <li><a href="">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
     <!--Main content-->
-    <main>
-        <section id="meditation"></section>
-    </main>
+    <main>Main content</main>
 
     <!--Footer-->
     <footer>
