Add div to the main section, styled the div

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta tags for search engines-->
     <meta name="description" content="Yoga Wellness. Transformative journey of wellness, yoga and healing in Portlaoise, Ireland">
-    <meta name="keywords" content="yoga wellness, yoga, meditation, wellness, Portlaoise, Ireland">
+    <meta name="keywords" content="yoga wellness, yoga, meditation, rejuvenation, wellness, Portlaoise, Ireland">
     <!--Title-->
     <title>Yoga Wellness</title>
     <!--Favicon-->
@@ -34,7 +34,35 @@
 
     <!--Main content-->
     <main>
-        <section id="meditation"></section>
+        <section id="meditation">
+        </section>
+        <section id="goals">
+            <h2>Yoga benefits beyond the mat</h2>
+            <div>
+                <h3>Better body image</h3>
+                <hr>
+                <p>Yoga cultivates self-awareness. It directs your attention to the capabilities of your body right now. 
+                    It aids in the development of both physical and mental strength. It has nothing to do with looks.</p>
+            </div>
+            <div>
+                <h3>Becoming a healthy eater</h3>
+                <hr>
+                <p>Yoga increases your awareness of your body's sensations. You can continue to practice this increased
+                   awareness during mealtimes by taking note of the flavors, textures, and odors of the food as you savor each bite or sip.</p>
+            </div>
+            <div>
+                <h3>Weightloss boost and maintenance</h3>
+                <hr>
+                <p>Researchers discovered that those who did yoga for at least 30 minutes once a week for four years or more experienced a decrease in weight gain during middle age.
+                     Overweight individuals actually dropped weight. In general, people who practiced yoga had lower body mass indices (BMIs) than people who didn't. This was linked by researchers to mindfulness. A more positive relationship with food and eating can result from mindful eating.
+                </p>
+            </div>
+            <div>
+                <h3>Heart benefits</h3>
+                <hr>
+                <p>Yoga can help to lower blood pressure, cholesterol level and blood sugar. It can help people with depression and arthritis.</p>
+            </div>
+        </section>
     </main>
 
     <!--Footer-->
