Add yoga-class times section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,27 @@
                 <p>Yoga can help to lower blood pressure, cholesterol level and blood sugar. It can help people with depression and arthritis.</p>
             </div>
         </section>
+        <!--Yoga class section-->
+        <section id="yoga-class">
+            <h2>Yoga-class Times</h2>
+            <div id="times">
+                <div>
+                    <h3>Monday</h3>
+                    <p>Portlaoise Leisure Centre</p>
+                    <p>17:00</p>
+                </div>
+                <div>
+                    <h3>Thursday</h3>
+                    <p>Midlands Park</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>Saturday</h3>
+                    <p>Portlaoise Leisure Centre</p>
+                    <p>11:30</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!--Footer-->
