Hide h2 section heading with utility class

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
         <!--Yoga class section-->
         <section id="yoga-class">
-            <h2>Yoga-class Times</h2>
+            <h2 class="hidden-heading">Yoga-class Times</h2>
             <div id="times">
                 <div>
                     <h3>Monday</h3>
