--- a/gallery.html
+++ b/gallery.html
@@ -25,15 +25,27 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu-list">
-                <li><a href="">Home</a></li>
-                <li><a href="" class="active">Gallery</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gallery.html" class="active">Gallery</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
     <!--Main content-->
-    <main>Main content</main>
+    <main>
+        <section id="gallery">
+            <div id="gallery-photos">
+                <img src="assets/images/gallery/yoga 3.jpg" alt="a woman undergoing the meditation session">
+                <img src="assets/images/yoga 1.jpg" alt="women in yoga session">
+                <img src="assets/images/yoga 4.jpg" alt="woman at a yoga session at home">
+                <img src="assets/images/buddhist-1807526_640.jpg" alt="Buddhist performing yoga">
+                <img src="assets/images/yoga 8.jpg" alt="three women at a yoga class">
+
+                
+            </div>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
