Add styling to the gallery page with the column count property

--- a/gallery.html
+++ b/gallery.html
@@ -41,6 +41,9 @@
                 <img src="assets/images/yoga 4.jpg" alt="woman at a yoga session at home">
                 <img src="assets/images/buddhist-1807526_640.jpg" alt="Buddhist performing yoga">
                 <img src="assets/images/yoga 8.jpg" alt="three women at a yoga class">
+                <img src="assets/images/man-1350599_640.jpg" alt="man meditating">
+                <img src="assets/images/yoga 5.jpg" alt="woman perfoming yoga">
+                <img src="assets/images/yoga 6.jpg" alt="woman in a meditation session">
 
                 
             </div>
