Add styling to contact section

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                 <br>
                 <label for="message">Message Us</label>
                 <br>
-                <input type="text" name="message us" id="message" class="text-input" required>
+                <input type="text" name="message us" id="message" class="text-input" >
                 <br>
                 <button type="reset">Reset</button>
                 <button type="submit">Send</button>
