--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
     <!--Main content-->
     <main>
-        <section id="meditation">
-        </section>
+        <div id="meditation">
+        </div>
         <section id="goals">
             <h2>Yoga benefits beyond the mat</h2>
             <div>
