Add sytling to the form

--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,10 @@
                 <br>
                 <label for="message">Message Us</label>
                 <br>
-                <input type="text" name="message us" id="message" class="text-input" >
+                <textarea id="message" name="message us" placeholder="Write your message here" required
+                            style="height:100px" ></textarea>
+            
                 <br>
-                <button type="reset">Reset</button>
                 <button type="submit">Send</button>
             </form>
         </section>
