--- a/contact.html
+++ b/contact.html
@@ -37,15 +37,21 @@
         <section id="contact">
             <form action="https://formdump.codeinstitute.net" id="contact-form" method="POST" target="_blank">
                 <h2>Contact Us/Sign up here</h2>
-                <label for="first-name">First Name</label>
+                <label for="first-name">"First Name:" 
+                    <em class="required">*required</em>
+                </label>
                 <br>
                 <input type="text" name="first_name" id="first-name" class="text-input" required>
                 <br>
-                <label for="last-name">Last Name</label>
+                <label for="last-name">"Last Name:"
+                    <em class="required">*required</em>
+                </label>
                 <br>
                 <input type="text" name="last_name" id="last-name" class="text-input" required>
                 <br>
-                <label for="email-address">Email Address</label>
+                <label for="email-address">"Email Address:"
+                    <em class="required">*required</em>
+                </label>
                 <br>
                 <input type="email" name="email_address" id="email-address" class="text-input" required>
                 <br>
@@ -53,10 +59,10 @@
                 <br>
                 <textarea id="message" name="message us" placeholder="Write your message here" required
                             style="height:100px" ></textarea>
-            
                 <br>
-                <button type="submit">Send</button>
-            </form>
+                <button type="submit" id="submit">Send</button>
+            
+                </form>
         </section>
     </main>
 
