Add Readme file

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,9 @@
                 <br>
                 <input type="email" name="email_address" id="email-address" class="text-input" required>
                 <br>
-                <label for="message">Message Us</label>
+                <label for="message">"Message Us"
+                    <em class="required">*required</em>
+                </label>
                 <br>
                 <textarea id="message" name="message us" placeholder="Write your message here" required
                             style="height:100px" ></textarea>
