Fix the spaces between the images naming

--- a/gallery.html
+++ b/gallery.html
@@ -34,21 +34,21 @@
 
     <!--Main content-->
     <main>
-        <section id="gallery">
+        <div id="gallery">
             <div id="gallery-photos">
-                <img src="assets/images/yoga 1.webp" alt="a woman undergoing the meditation session">
-                <img src="assets/images/yoga 2.webp" alt="women in yoga session">
-                <img src="assets/images/yoga 3.webp" alt="woman at a yoga session at home">
+                <img src="assets/images/yoga-1.webp" alt="a woman undergoing the meditation session">
+                <img src="assets/images/yoga-2.webp" alt="women in yoga session">
+                <img src="assets/images/yoga-3.webp" alt="woman at a yoga session at home">
                 <img src="assets/images/buddhist-1807526_640.webp" alt="Buddhist performing yoga">
-                <img src="assets/images/yoga 4.webp" alt="three women at a yoga class">
+                <img src="assets/images/yoga-4.webp" alt="three women at a yoga class">
                 <img src="assets/images/man-1350599_640.webp" alt="man meditating">
-                <img src="assets/images/yoga 5.webp" alt="woman perfoming yoga">
-                <img src="assets/images/yoga 6.webp" alt="woman in a meditation session">
-                <img src="assets/images/yoga 7.webp" alt="woman meditating"
+                <img src="assets/images/yoga-5.webp" alt="woman perfoming yoga">
+                <img src="assets/images/yoga-6.webp" alt="woman in a meditation session">
+                <img src="assets/images/yoga-7.webp" alt="woman meditating">
 
                 
             </div>
-        </section>
+        </div>
     </main>
 
     <!--Footer-->
