--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
-        <nav>
+        <nav aria-label="main-navigation">
             <ul id="menu-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -59,7 +59,7 @@
                     <em class="required">*required</em>
                 </label>
                 <br>
-                <textarea id="message" name="message us" placeholder="Write your message here" required
+                <textarea id="message" name="message" placeholder="Write your message here" required
                             style="height:100px" ></textarea>
                 <br>
                 <button type="submit" id="submit">Send</button>
