--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
-        <nav>
+        <nav aria-label="main-navigation">
             <ul id="menu-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html" class="active">Gallery</a></li>
