--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
-        <nav>
+        <nav aria-labelledby="primary-navigation">
             <ul id="menu-list">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -32,6 +32,7 @@
         </nav>
     </header>
 
+    
     <!--Main content-->
     <main>
         <div id="meditation">
