--- a/contact.html
+++ b/contact.html
@@ -37,25 +37,25 @@
         <section id="contact">
             <form action="https://formdump.codeinstitute.net" id="contact-form" method="POST" target="_blank">
                 <h2>Contact Us/Sign up here</h2>
-                <label for="first-name">"First Name:" 
+                <label for="first-name">First Name: 
                     <em class="required">*required</em>
                 </label>
                 <br>
                 <input type="text" name="first_name" id="first-name" class="text-input" required>
                 <br>
-                <label for="last-name">"Last Name:"
+                <label for="last-name">Last Name:
                     <em class="required">*required</em>
                 </label>
                 <br>
                 <input type="text" name="last_name" id="last-name" class="text-input" required>
                 <br>
-                <label for="email-address">"Email Address:"
+                <label for="email-address">Email Address:
                     <em class="required">*required</em>
                 </label>
                 <br>
                 <input type="email" name="email_address" id="email-address" class="text-input" required>
                 <br>
-                <label for="message">"Message Us"
+                <label for="message">Message
                     <em class="required">*required</em>
                 </label>
                 <br>
