Modify image alt name

--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
     <main>
         <div id="gallery">
             <div id="gallery-photos">
-                <img src="assets/images/yoga-1.webp" alt="a woman undergoing the meditation session">
+                <img src="assets/images/yoga-1.webp" alt="woman undergoing the meditation session">
                 <img src="assets/images/yoga-2.webp" alt="women in yoga session">
                 <img src="assets/images/yoga-3.webp" alt="woman at a yoga session at home">
                 <img src="assets/images/buddhist-1807526_640.webp" alt="Buddhist performing yoga">
